--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -163,4 +163,8 @@
     <zType>TEXT_PROJECT_AUTONOMOUS_RULE</zType>
     <Translation>Autonome Herrschaft</Translation>
   </Entry>  
+<Entry>
+    <zType>TEXT_PROJECT_MONUMENTAL_GATE</zType>
+    <Translation>Monumentales Tor</Translation>
+  </Entry>
 </Root>
